# kiro-proxy

./: .gitignore  1  Cargo.toml  FRP_DEPLOYMENT.md  FRP原理.md  Makefile  app.js  build.sh  codes.json  config.json  vibe-coding-vs-spec-coding.md  部署自定义的服务器.md
docs/: linux-gui-build.md
kiro-go/: README.md  config.local.json  deploy.sh  go.mod  go.sum  main.go  test_api.sh
kiro-go/cmd/test_warp/: main.go
kiro-go/docs/: BUG_KIRO_GO_HANG.md  DEBUGGING_TOOL_CALLS_400.md
kiro-go/internal/anthropic/: context_compressor.go  converter.go  direct_provider.go  handlers.go  model_resolver.go  stream.go  token.go  websearch.go
kiro-go/internal/claudecode/: handlers.go  provider.go
kiro-go/internal/codex/: handlers.go  provider.go  store.go
kiro-go/internal/common/: auth.go  request_id.go  router.go  truncation_recovery.go  truncation_state.go
kiro-go/internal/kiro/: admin_html.go  codes_handlers.go  codes_manager.go  events.go  machine_id.go  provider.go  token_manager.go  (+1 more)
kiro-launcher/: .gitignore  SPEC.md  account.go  activation.go  app.go  config.go  credentials.go  external_config.go  go.mod  go.sum  index.html  keychain.go  keychain_ops.go  logger.go  main.go  package.json  pnpm-lock.yaml  prompts.go  proxy.go  relay.go  server_sync.go  sidecar.go  tunnel.go  vite.config.ts  wails.json  warp_keychain.go
kiro-launcher/src/: App.tsx  index.css  wails.d.ts
test/: index.html  package.json  server.js
杂/claude-api-2-cursor-main/: .env.example  README.md  app.py  config.py  openai_adapter.py  tool_use_fixer.py
杂/kiro-account-manager-main 2/: README.md
(+72 files in other folders)
