[workspace]
members = [
    "kiro.rs",
    "kiro-launcher/src-tauri",
]
resolver = "2"

[profile.release]
lto = true
strip = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1" }
